# doraemon-code-like-claude-code-with-python

./: .env.example  .gitignore  AGENTS.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DORAEMON.md  Dockerfile  ENGINEERING_SUMMARY.md  FINAL_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEGACY_ISSUES.md  MANIFEST.in  PARALLEL_COMPLETION_SUMMARY.md  PHASE1_REPORT.md  README.md  TASK_AB_REPORT.md  coverage.json  pyproject.toml
.doraemon/: config.json  plan.md  settings.example.json
.doraemon/chroma_db/: chroma.sqlite3
.doraemon/conversations/: default.json
.doraemon/usage/: 2026-01-27.json
.github/workflows/: ci.yml  evaluation.yml
.polymath/: config.json
docs/: AGENT_EVALUATION_FRAMEWORK.md  ANTHROPIC_EVALUATION_REFERENCE.md  ARCHITECTURE_REVIEW.md  EVALUATION_SYSTEM.md  PERFORMANCE_OPTIMIZATION.md  SIMPLIFICATION.md  api.md  development.md
eval_results/demo/: results_20260204_090817.json  speedup_comparison.json  summary_20260204_090817.json
eval_results/parallel/: results_20260204_101412.json  results_20260204_101521.json  results_20260324_124330.json  results_20260324_124452.json  results_20260324_124602.json  results_20260324_124603.json  results_20260324_124706.json  results_20260324_124829.json  results_20260324_124832.json  results_20260324_162525.json  results_20260324_163058.json  summary_20260203_231010.json  summary_20260203_231305.json  summary_20260204_090618.json  summary_20260204_101330.json  summary_20260204_101412.json  summary_20260204_101521.json  summary_20260324_124330.json  summary_20260324_124452.json  summary_20260324_124602.json  summary_20260324_124603.json  summary_20260324_124706.json  summary_20260324_124829.json  summary_20260324_124832.json  summary_20260324_162525.json  summary_20260324_163058.json
eval_results/test/: report_20260204_101519.json  report_20260204_101519.md  report_20260324_124329.json  report_20260324_124329.md  report_20260324_124450.json  report_20260324_124450.md  report_20260324_124601.json  report_20260324_124601.md  report_20260324_124602.json  report_20260324_124602.md  report_20260324_124704.json  report_20260324_124704.md  report_20260324_124827.json  report_20260324_124827.md  report_20260324_124830.json  report_20260324_124830.md  report_20260324_162524.json  report_20260324_162524.md  report_20260324_163056.json  report_20260324_163056.md
google/: __init__.py
google/genai/: __init__.py  types.py
polymath.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rich/: __init__.py  console.py  logging.py  markdown.py  panel.py  prompt.py  syntax.py  table.py
scripts/: ci_eval_runner.py  run_benchmark.py  run_evals.py
src/: __init__.py  agent.py
src/agent/: __init__.py  adapter.py  base.py  doraemon.py  react.py  state.py  types.py
src/core/: __init__.py  agent_loop.py  async_files.py  auto_test_fix.py  background_tasks.py  browser.py  cache.py  checkpoint.py  codebase_map.py  command_history.py  commands.py  config.py  configuration.py  container.py  context_manager.py  cost_tracker.py  diff.py  doctor.py  errors.py  events.py  file_watcher.py  git_hooks.py  home.py  hooks.py  hot_reload.py  http_pool.py  i18n.py  input_mode.py  log_rotation.py  logger.py  mcp_client.py  memory_layers.py  model_adapters.py  model_client.py  model_client_direct.py  model_client_gateway.py  model_manager.py  model_utils.py  notifications.py  parallel_executor.py  (+34 more)
src/evals/: __init__.py  enhanced_harness.py  harness.py  model_grader.py  professional_benchmarks.py
src/gateway/: README.md  __init__.py  client.py  router.py  schema.py  server.py
src/host/: __init__.py  cli.py  cli_commands.py  client.py  mcp_registry.py  mcp_runtime.py  tools.py  tui.py
src/runtime/: __init__.py  bootstrap.py  lead.py
src/servers/: __init__.py  ask_user.py  browser.py  computer.py  database.py  files.py  filesystem.py  filesystem_unified.py  fs_edit.py  fs_ops.py  fs_read.py  fs_write.py  git.py  git_advanced.py  git_branch.py  git_common.py  git_remote.py  github.py  lint.py  lsp.py  memory.py  office.py  run.py  run_unified.py  semantic_search.py  shell.py  spec.py  system.py  task.py  task_manager.py  web.py
src/services/: code_nav.py  document.py  embeddings.py  office.py  outline.py  reranking.py  vision.py
src/webui/: __init__.py  server.py
tasks/advanced/: refactoring.json
tasks/basic/: code_generation.json
tests/: BENCHMARK_PLAN.md  TEST_BENCHMARK_PLAN.md  conftest.py  test_office.py  test_run_benchmark_script.py
tests/agent/: test_adapter_coverage.py  test_adapter_coverage2.py  test_adapter_coverage3.py  test_agent.py  test_agent_state.py  test_agent_types.py  test_doraemon_coverage.py  test_doraemon_coverage2.py  test_doraemon_coverage3.py  test_mcp_agent_visibility.py  test_react_agent.py  test_react_coverage.py
tests/benchmarks/: humaneval_plus.py  swebench_verified.py  test_performance_benchmarks.py
tests/core/: test_agent_loop.py  test_anthropic_provider.py  test_background_tasks.py  test_browser.py  test_cache.py  test_checkpoint.py  test_checkpoint_comprehensive.py  test_commands.py  test_commands_coverage.py  test_config.py  test_config_schema.py  test_config_secrets.py  test_configuration.py  test_container.py  test_context_manager.py  test_context_manager_advanced.py  test_context_manager_comprehensive.py  test_context_manager_extended.py  test_diff.py  test_errors.py  test_errors_extended.py  test_events.py  test_google_provider.py  test_home.py  test_hooks.py  test_hooks_comprehensive.py  test_logger.py  test_mcp_client.py  test_mcp_client_comprehensive.py  test_memory_layers.py  test_model_client.py  (+40 more)
tests/evals/fixtures/api_project/: pyproject.toml
tests/evals/fixtures/api_project/app/: __init__.py  main.py  routes.py
tests/evals/fixtures/api_project/tests/: test_routes.py
tests/evals/fixtures/python_project/: pyproject.toml
tests/evals/fixtures/python_project/src/: __init__.py  main.py  utils.py
tests/evals/fixtures/python_project/tests/: __init__.py  test_main.py
webui/: index.html  package-lock.json  vite.config.ts
(+226 files in other folders)
