[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doraemon-code"
version = "0.8.0"
description = "Doraemon Code - Your AI Coding Assistant with Web UI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Doraemon Code Contributors"}
]
keywords = ["ai", "assistant", "mcp", "code-assistant", "doraemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


dependencies = [
    # MCP Protocol
    "mcp[cli]>=1.0.0",
    
    # AI SDKs (official only)
    "google-genai>=0.2.0",          # Google Gemini official SDK
    "openai>=1.0.0",                # OpenAI official SDK
    "anthropic>=0.18.0",            # Anthropic Claude official SDK
    
    # Gateway Server
    "fastapi>=0.100.0",             # API framework for Gateway
    "uvicorn[standard]>=0.23.0",    # ASGI server
    "httpx>=0.24.0",                # Async HTTP client
    
    # CLI & UI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    
    # Data Processing
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # File Processing
    "pillow>=10.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "openpyxl>=3.1.0",
    
    # Web & Search
    "duckduckgo-search>=6.0.0",
    "trafilatura>=1.6.0",
    "requests>=2.31.0",
    
    # File Watching
    "watchdog>=3.0.0",              # File system monitoring
]

[project.optional-dependencies]
local-ai = [
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

browser = [
    "playwright>=1.40.0",           # Browser automation
]

all = [
    "playwright>=1.40.0",
]

[project.scripts]
doraemon = "src.host.cli:entry_point"
dora = "src.host.cli:entry_point"

[project.urls]
Homepage = "https://github.com/doraemon-code/doraemon-code"
Repository = "https://github.com/doraemon-code/doraemon-code"
"Bug Tracker" = "https://github.com/doraemon-code/doraemon-code/issues"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
